--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@rollup/plugin-inject": "^5.0.3",
         "axios": "^1.1.2",
         "eslint": "^8.43.0",
+        "jquery": "^3.7.0",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
     }
